--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,13 +68,13 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">View (browser)</string>
     <string name="title_category">Category:</string>
     <string name="title_restrict">Check to restrict:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Filters: 0 active</string>
 
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">Filters: 1 active</item>
+        <item quantity="other">Filters: %d active</item>
     </plurals>
-
+	<string name="title_batch_mode">Batch mode</string>
     <string name="title_fused">Filter on data usage</string>
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
