--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -87,6 +87,7 @@
     <string name="settings_operator">المُشغل</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_ua">وكيل المستخدم</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
