--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -87,6 +87,7 @@
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Абонатно ID</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
