--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -87,6 +87,7 @@
     <string name="settings_operator">Mobilfunkanbieter</string>
     <string name="settings_subscriber">Subscriber-ID</string>
     <string name="settings_ua">User-Agent (Browser)</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug-Log (erfordert Geräteneustart)</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
