--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -87,6 +87,7 @@
     <string name="settings_operator">Operatore</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (richiede riavvio)</string>
     <string name="help_application">Applicazione</string>
     <string name="help_internet">ha permesso internet</string>
