--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -87,6 +87,7 @@
     <string name="settings_operator">キャリア</string>
     <string name="settings_subscriber">契約者固有ID</string>
     <string name="settings_ua">ユーザーエージェント</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">デバッグログ(要再起動)</string>
     <string name="help_application">アプリ</string>
     <string name="help_internet">はインターネット権限を持っています</string>
