--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -87,6 +87,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_operator">Operador</string>
     <string name="settings_subscriber">Identidade do subscritor</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Relatório de depuração (requer reinicialização)</string>
     <string name="help_application">Aplicação</string>
     <string name="help_internet">Tem permissão da internet</string>
