--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -88,6 +88,7 @@
     <string name="settings_operator">Оператор</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Отладочный лог (требует перезагрузки)</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
