--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -87,6 +87,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Претплатнички ИД</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="help_application">Апликација</string>
     <string name="help_internet">има дозволу за Интернет</string>
