--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -56,6 +56,7 @@
     <string name="restrict_network">Ağ (adresler)</string>
     <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Telefon (Kimlik, numaralar, aramalar)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Depolama (medya, SD kart)</string>
     <string name="restrict_shell">Kabuk (komutlar, superuser)</string>
     <string name="restrict_system">Sistem (yüklü uygulamalar)</string>
