--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -56,6 +56,7 @@
     <string name="restrict_network">Mạng (địa chỉ mạng)</string>
     <string name="restrict_notifications">Thông báo</string>
     <string name="restrict_phone">Điện thoại (ID, số liên lạc, cuộc gọi)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Lưu trữ (media, thẻ nhớ)</string>
     <string name="restrict_shell">Shell (câu lệnh, superuser)</string>
     <string name="restrict_system">Hệ thống (các ứng dụng)</string>
