--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -57,6 +57,7 @@
     <string name="restrict_network">Мрежа (адреси)</string>
     <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Телефон (ID, номера, обаждания)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Съхранение (носители, SD карта)</string>
     <string name="restrict_shell">Терминал (команди, суперпотребител)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
