--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -57,6 +57,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_network">רשת (כתובות)</string>
     <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">טלפון (זיהוי, מספרים, שיחות)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">אחסון (מדיה, כרטיס SD)</string>
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">מערכת (יישומים מותקנים)</string>
