--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -57,6 +57,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_network">Tinklas (adresai)</string>
     <string name="restrict_notifications">Įspėjimai</string>
     <string name="restrict_phone">Telefonas (ID, numeris, skambučiai)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Atmintis (media, SD kortelė)</string>
     <string name="restrict_shell">Vykdymas (komandos, superuser)</string>
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
