--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -57,6 +57,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_network">Netwerk (adressen)</string>
     <string name="restrict_notifications">Notificaties</string>
     <string name="restrict_phone">Telefoon (ID, nummers, oproepen)</string>
+    <string name="restrict_sensors">Sensoren</string>
     <string name="restrict_storage">Opslag (media, SD card)</string>
     <string name="restrict_shell">Shell (opdrachten, superuser)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
