--- a/res/values-nn-rNO/strings.xml
+++ b/res/values-nn-rNO/strings.xml
@@ -55,6 +55,7 @@
     <string name="restrict_network">Nettverk (adresser)</string>
     <string name="restrict_notifications">Varslinger</string>
     <string name="restrict_phone">Telefon (ID, nummere, oppringninger)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Minne (medier, SD kort)</string>
     <string name="restrict_shell">Shell (kommandoer, superbruker)</string>
     <string name="restrict_system">System (installerte apper)</string>
