--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -57,6 +57,7 @@
     <string name="restrict_network">Sieć (adresy)</string>
     <string name="restrict_notifications">Powiadomienia</string>
     <string name="restrict_phone">Telefon (ID, numery, połączenia)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Storage (media, karta SD)</string>
     <string name="restrict_shell">Powłoka (polecenia, superuser)</string>
     <string name="restrict_system">System (zainstalowane aplikacje)</string>
