--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -57,6 +57,7 @@
     <string name="restrict_network">Omrežje (naslovi)</string>
     <string name="restrict_notifications">Obvestila</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Pomnilnik (medij, SD kartica)</string>
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
