--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -57,6 +57,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_network">Мрежа (адресе)</string>
     <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Телефон (ИД, бројеви, позиви)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Уложни простор (медија, СД карта)</string>
     <string name="restrict_shell">Шел (команде, суперкорисник)</string>
     <string name="restrict_system">Систем (инсталиране апликације)</string>
