--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -57,6 +57,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="restrict_network">Nätverk (adresser)</string>
     <string name="restrict_notifications">Notifikationer</string>
     <string name="restrict_phone">Telefon (ID, nummer, samtal)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Lagring (media, SD-kort)</string>
     <string name="restrict_shell">Shell (kommandon, superuser)</string>
     <string name="restrict_system">System (installerade appar)</string>
