--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -57,6 +57,7 @@
     <string name="restrict_network">网络 (地址)</string>
     <string name="restrict_notifications">通知</string>
     <string name="restrict_phone">手机 (ID, 电话号码, 通话)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">存储 (媒体, SD 卡)</string>
     <string name="restrict_shell">Shell (命令, 超级用户)</string>
     <string name="restrict_system">系统 (已安装的应用)</string>
